// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatStatusTable > should format empty list 1`] = `
"Migration Status (./migrations):

  No migrations found."
`;

exports[`formatStatusTable > should format mixed statuses 1`] = `
"Migration Status (./migrations):

  Name                       Status
  ─────────────────────────  ────────────────────
  20260220090000-init        applied
  20260221100000-add-users   applied
  20260222120000-add-orders  pending

2 applied, 1 pending, 0 checksum mismatches."
`;

exports[`formatStatusTable > should format single applied migration 1`] = `
"Migration Status (./migrations):

  Name                 Status
  ───────────────────  ────────────────────
  20260220090000-init  applied

1 applied, 0 pending, 0 checksum mismatches."
`;

exports[`formatStatusTable > should format with checksum mismatch 1`] = `
"Migration Status (./migrations):

  Name                       Status
  ─────────────────────────  ────────────────────
  20260220090000-init        applied
  20260221100000-add-users   checksum mismatch
  20260222120000-add-orders  pending

1 applied, 1 pending, 1 checksum mismatches."
`;
